export data labels for all chart types, tdf#90729

Change-Id: I55b9b87a8de2ecee4f1ae3159938bfd2fb3acbaa